--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,17 +11,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Setup Moon toolchain
+        uses: 'moonrepo/setup-toolchain@v0'
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22.13.1
 
-      - name: Install pnpm
-        run: npm i -g pnpm
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
       - name: Trigger Portainer Stack Redeploy
         id: redeploy
-        run: pnpm moon :deploy
+        run: moon :deploy
