--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,4 @@ jobs:
 
       - name: Trigger Portainer Stack Redeploy
         id: redeploy
-        run: moon :deploy
+        run: moon ci :deploy
