--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,27 +48,37 @@ jobs:
 
       - name: Trigger deploy
         run: |
-          if ! git diff --quiet tools/deploy/docker-swarm.yml; then
-            echo "Changes detected in deploy configuration, proceeding with deploy"
-            
-            git fetch origin deploy || true
-            git stash --include-untracked tools/deploy/docker-swarm.yml
-            git clean -fdX
-            git checkout deploy
-            git rm tools/deploy/docker-swarm.yml || true
-            git stash pop
-            
-            git merge --no-commit --no-ff $GITHUB_SHA || {
-              echo "Conflict detected, resolving in favor of master branch"
-              git checkout --theirs .
-              git add .
-            }
-
-            git add tools/deploy/docker-swarm.yml
-            git commit -m "[CI] Deploy"
-            git push origin deploy --force-with-lease
-
-          else
-            echo "No changes in deploy configuration, skipping deploy"
-            git merge --abort || true
+          if [ ! -f tools/deploy/docker-swarm.yml ]; then
+            echo "No deploy configuration file found, skipping deploy"
+            exit 0
           fi
+
+          echo "Deploy configuration file found, preparing deploy branch"
+
+          # Prepare deploy branch
+          git fetch origin deploy || true
+          git stash push --include-untracked tools/deploy/docker-swarm.yml
+          git clean -fdX
+          git checkout deploy
+          git rm tools/deploy/docker-swarm.yml || true
+          git stash pop
+          git add tools/deploy/docker-swarm.yml
+
+          # Check if the file actually changed compared to what's in the deploy branch
+          if git diff --quiet HEAD -- tools/deploy/docker-swarm.yml; then
+            echo "No changes in deploy configuration, skipping deploy"
+            exit 0
+          fi
+
+          echo "Changes detected in deploy configuration, proceeding with deploy"
+
+          # Proceed with merge and deploy
+          git merge --no-commit --no-ff $GITHUB_SHA || {
+            echo "Conflict detected, resolving in favor of master branch"
+            git checkout --theirs .
+            git add .
+          }
+
+          git add tools/deploy/docker-swarm.yml
+          git commit -m "[CI] Deploy"
+          git push origin deploy --force-with-lease
