--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,27 @@
 name: Deploy
 
 on:
+  # Trigger on manual push to deploy branch
   push:
     branches:
       - deploy
 
+  # Trigger when build workflow completes successfully
+  workflow_run:
+    workflows: ['Build images']
+    types:
+      - completed
+    branches:
+      - master
+
 jobs:
   deploy:
     runs-on: self-hosted
+    if: >
+      github.event_name == 'push' || 
+      (github.event_name == 'workflow_run' && 
+       github.event.workflow_run.conclusion == 'success' &&
+       github.event.workflow_run.outputs.should_deploy == 'true')
     steps:
       - uses: actions/checkout@v4
 
@@ -18,6 +32,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22.13.1
+
+      - name: Show trigger reason
+        run: |
+          if [ "${{ github.event_name }}" = "push" ]; then
+            echo "🔄 Deployment triggered by manual push to deploy branch"
+          else
+            echo "🚀 Deployment triggered by successful build workflow"
+          fi
 
       - name: Trigger Portainer Stack Redeploy
         id: redeploy
