--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,14 +48,8 @@ jobs:
       - name: Merge into deploy branch
         run: |
           # Checkout deploy branch
-          git fetch origin deploy:deploy || {
-            echo "Deploy branch does not exist, creating it"
-            git checkout -b deploy
-          }
           git checkout deploy
-          git reset --hard origin/deploy
-          git clean -fdx
-          git pull --rebase origin deploy
+          git pull -r
 
           # Merge changes from master into deploy
           git merge --no-edit --no-ff -m "[CI] Deploy" master
@@ -76,4 +70,7 @@ jobs:
           echo "Deploy configuration file found, preparing deploy branch"
 
           git commit -a --amend --no-edit
-          git push
+          git push -u origin deploy || {
+            echo "Failed to push changes to deploy branch, skipping deploy"
+            exit 0
+          }
