--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,14 +48,8 @@ jobs:
       - name: Merge into deploy branch
         run: |
           # Checkout deploy branch
-          git fetch origin deploy:deploy || {
-            echo "Deploy branch does not exist, creating it"
-            git checkout -b deploy
-          }
           git checkout deploy
-          git reset --hard origin/deploy
-          git clean -fdx
-          git pull --rebase origin deploy
+          git pull -r
 
           # Merge changes from master into deploy
           git merge --no-edit --no-ff -m "[CI] Deploy" master
